[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = ["fullstack", "router"] }
axum = { version = "0.8", optional = true, features = ["macros"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "sync"] }
tower = { version = "0.5.1", optional = true }
tower-http = { version = "0.6.2", features = [
    "fs",
    "trace",
    "cors",
    "compression-br",
    "compression-deflate",
    "compression-zstd",
    "compression-gzip",
], optional = true }
thiserror = "1"
tracing = { version = "0.1", optional = true }
http = "1"
surrealdb = { version = "2.3.10", features = ["protocol-http"] }
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
dotenvy = "0.15.7"
syntect = { version = "5.2.0", optional = true, default-features = false, features = [
    "default-fancy",
    "html",
    "parsing",
    "plist-load",
    "regex-fancy",
    "yaml-load",
] }
regex = { version = "1.10.6", optional = true }
pulldown-cmark = { version = "0.12.0", optional = true }
rss = { version = "2.0.9", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
katex = { version = "0.4.6", optional = true, default-features = false, features = ["duktape"] }
lettre = { version = "0.11.9", default-features = false, optional = true, features = [
    "builder",
    "smtp-transport",
    "rustls-tls",
    "tokio1",
    "tokio1-rustls-tls",
] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
dioxus-free-icons = { version = "0.10.0", features = ["font-awesome-brands", "font-awesome-solid"] }

[features]
default = []
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:syntect",
    "dep:regex",
    "dep:pulldown-cmark",
    "dep:rss",
    "dep:tracing-subscriber",
    "dep:katex",
    "dep:lettre",
]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
