[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }
axum = { version = "0.8", optional = true, features = ["macros"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "sync"] }
tower = { version = "0.5.1", optional = true }
tower-http = { version = "0.6.2", features = [
    "fs",
    "trace",
    "cors",
    "compression-br",
    "compression-deflate",
    "compression-zstd",
    "compression-gzip",
], optional = true }
thiserror = "1"
tracing = { version = "0.1", optional = true }
http = "1"
# The full client is server-only; shared types (RecordId, SurrealValue) come from
# surrealdb-types so the wasm build doesn't pull the client engines (whose reqwest
# 0.13 wasm-streams clashes with dioxus' reqwest 0.12 copy at LTO link time).
surrealdb = { version = "3", features = ["protocol-http"], optional = true }
surrealdb-types = "3"
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
dotenvy = "0.15.7"
syntect = { version = "5.2.0", optional = true, default-features = false, features = [
    "default-fancy",
    "html",
    "parsing",
    "plist-load",
    "regex-fancy",
    "yaml-load",
] }
regex = { version = "1.10.6", optional = true }
pulldown-cmark = { version = "0.12.0", optional = true }
rss = { version = "2.0.9", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
katex = { version = "0.4.6", optional = true, default-features = false, features = ["duktape"] }
lettre = { version = "0.11.9", default-features = false, optional = true, features = [
    "builder",
    "smtp-transport",
    "rustls-tls",
    "tokio1",
    "tokio1-rustls-tls",
] }
reqwest = { version = "0.12.28", default-features = false, optional = true, features = ["json", "rustls-tls"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
# surrealdb-types → geo → rand 0.8 pulls getrandom 0.2, which needs "js" on wasm
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
dioxus-free-icons = { version = "0.10.0", features = ["font-awesome-brands", "font-awesome-solid"] }
# Must match the wasm-bindgen CLI the Dioxus CLI uses to process the wasm (dx
# downloads the CLI version found in Cargo.lock, so keep this an exact pin). A
# mismatch leaves __wbindgen_placeholder__ imports / schema-version errors so the
# module never instantiates and the client never hydrates. 0.2.108 is the exact
# version surrealdb 3.x's wasm-bindgen-futures dependency requires.
wasm-bindgen = "=0.2.108"

[features]
default = []
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:surrealdb",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:syntect",
    "dep:regex",
    "dep:pulldown-cmark",
    "dep:rss",
    "dep:tracing-subscriber",
    "dep:katex",
    "dep:lettre",
    "dep:reqwest",
]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
