[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api", optional = true}
components = { path = "../components" }
leptos = { workspace = true, features = ["ssr"]}
leptos_meta.workspace = true
leptos_router.workspace = true
chrono.workspace = true
leptos_icons.workspace = true
icondata.workspace = true

[features]
hydrate = ["leptos/hydrate"]
ssr = ["leptos_meta/ssr", "leptos_router/ssr", "dep:api"]

