[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default-features = false, features = ["hydrate"], optional = true }
leptos = { workspace = true, features = ["hydrate"] }

console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true

[features]
hydrate = ["leptos/hydrate"]